add standard response for all services
